ignore file updated

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/AlexGitHub/v15/.suo
+/.vs/config/applicationhost.config
+/.vs/slnx.sqlite
